# qdrant-odm

./: README-KR.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
qdrant_odm/: __init__.py  client.py  exceptions.py  fields.py  model.py  query.py  repository.py  result.py  schema.py  transaction.py  types.py
qdrant_odm/model/: __init__.py  base.py  fields.py  metadata.py  registry.py  serializer.py
qdrant_odm/query/: __init__.py  compiler.py  expressions.py  filters.py  operators.py  search.py
qdrant_odm/repository/: __init__.py  async_repository.py  base.py  result.py
qdrant_odm/schema/: __init__.py  diff.py  planner.py  qdrant_schema.py  sync.py
qdrant_odm/utils/: __init__.py  chunking.py  inspect.py  typing.py
tests/: test_chunking.py  test_model_and_query.py  test_schema_and_repository.py  test_transaction.py
