[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qdrant-odm"
version = "0.1.0"
description = "Qdrant-first ODM for typed models and vector search."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0",
  "qdrant-client>=1.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
